@@ -34,6 +34,9 @@ The input and output databases must be different.
 .IP "--compare, -E"
 Compares two databases. They must be defined in config file with
 database=<url> and database_new=<url>.
+.IP "--list (added in AIDE v0.19)"
+List the entries of the database in human readable format (analogous to the
+detailed report output of new files). Note that the checksums are base16 encoded.
 .IP "--config-check, -D"
 Stops after reading in the configuration file. Any errors will be reported.
 To change the log level in this mode please use the \fB--log-level\fR
