@@ -48,6 +48,9 @@ typedef enum {
     REPORT_FORMAT_JSON = 2,
 } REPORT_FORMAT;
 
+extern const ATTRIBUTE report_attrs_order[];
+extern int report_attrs_order_length;
+
 bool init_report_urls(void);
 
 bool add_report_url(url_t* url, int, char*, char*);
@@ -137,7 +140,7 @@ char* get_file_type_string(mode_t);
 char* get_summarize_changes_string(report_t*, seltree*);
 char* get_summary_string(report_t*);
 const char* get_report_level_string(REPORT_LEVEL);
-int get_attribute_values(DB_ATTR_TYPE, db_line*,char* **, report_t* );
+int get_attribute_values(DB_ATTR_TYPE, db_line*,char* **, int, long);
 void print_databases_attrs(report_t *, void (*)(report_t *, db_line*));
 void print_dbline_attrs(report_t *, db_line*, db_line*, DB_ATTR_TYPE, void (*)(report_t *, db_line*, db_line*, ATTRIBUTE));
 void print_report_config_options(report_t *, void (*)(report_t *, config_option, const char*));
