@@ -7,6 +7,7 @@ Version 0.19 (UNRELEASED)
         - 'grouped' config option is no longer supported, use
           'report_grouped' instead
     * Add progress bar (add '--no-progress' parameter)
+    * Add '--list' command (to list database in human readable format)
     * Require pthread (remove --without-pthread configure option)
     * Remove contrib/ scripts
     * Performance improvements
